Fixat CSS med lite glow runt ikoner, samt z-index så att det ska se snyggt ut. etc

--- a/Mobile/styles/style.css
+++ b/Mobile/styles/style.css
@@ -101,7 +101,7 @@ body {
   position: absolute;
   top: 12.5%;
   left: 5%;
-  overflow: auto;
+  /*overflow: auto;*/
 }
 
 .button {
@@ -201,9 +201,9 @@ z-index: -1;
     inset 0 0 0 0 16px rgba(255, 255, 255, 0.6),
     0 1px 2px rgba(0, 0, 0, 0.1);
 
-    transition: all 0.6s ease-in-out;
-    -moz-transition: all 0.6s ease-in-out;
-    -webkit-transition: all 0.6s ease-in-out;
+    transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
 }
 
 .logo:hover {
@@ -213,11 +213,10 @@ z-index: -1;
     margin: auto;
     z-index: 1;
     box-shadow: inset 0 0 0 1100px rgba(0, 0, 0, 0.8),
-    0 1px 2px rgba(0, 0, 0, 0.1);
+    0 1px 2px rgba(0, 0, 0, 1);
     -moz-box-shadow: inset 0 0 0 1100px rgba(0, 0, 0, 0.8),
     0 1px 2px rgba(0, 0, 0, 0.1);
-    -webkit-box-shadow: inset 0 0 0 1100px rgba(0, 0, 0, 0.8),
-    0 1px 2px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 0 30px white;
 
 }
 
@@ -226,17 +225,24 @@ z-index: -1;
     border: 3px solid #B20808;
     float: left;
     clear: both;
+    z-index: 3;
+}
+
+.logo.mcdonalds:hover {
+    -webkit-box-shadow: 0 0 30px #EA0100;
 }
 
 .info1 {
     background-color: #FFF;
     margin: 40px 10px 40px 120px;
     position: absolute;
+    z-index: 0;
 
 }
 
 .info1.mcdonalds {
     margin: 10px auto;
+
 }
 
 .logo.clasohlson {
@@ -244,6 +250,11 @@ z-index: -1;
     border: 3px solid #ffffff;
     float: left;
     clear: both;
+    z-index: 2;
+}
+
+.logo.clasohlson:hover {
+    -webkit-box-shadow: 0 0 30px #0071BC;
 }
 
 .logo.ica {
@@ -251,13 +262,21 @@ z-index: -1;
     border: 3px solid #ccc;
     float: left;
     clear: both;
+    z-index: 1;
 }
 
-
+.gradient {
+    margin: 20px;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    background: -webkit-linear-gradient(left, #0071bc, #27A8E0, #29ABE2);
+    -webkit-box-shadow: 0 0 15px #0071BC;
+}
 
 img {
     display: block;
-    margin: 11px auto;
+    margin: 13%;
     max-height: 70%;
 }
 
